Always load Ruffle from CDN and add it as a dependency
This commit has a long story behind it.
Removes Ruffle from /scripts/ and instead always loads the installed version from unpkg, Ruffle's preferred CDN.
This requires having unpkg in the CORS rules.
Ruffle is also loaded from the CDN in dev mode. To help with this an externalPackages array has been added to the vite dev config.

Co-authored-by: Julia Johannesen <julia@insertdomain.name>

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,8 +25,9 @@
 		"@rollup/plugin-json": "6.1.0",
 		"@rollup/plugin-replace": "5.0.7",
 		"@rollup/pluginutils": "5.1.2",
-		"@transfem-org/sfm-js": "0.24.5",
+		"@ruffle-rs/ruffle": "0.1.0-nightly.2024.10.15",
 		"@syuilo/aiscript": "0.19.0",
+		"@transfem-org/sfm-js": "0.24.5",
 		"@twemoji/parser": "15.1.1",
 		"@vitejs/plugin-vue": "5.1.4",
 		"@vue/compiler-sfc": "3.5.10",
