--- a/package.json
+++ b/package.json
@@ -66,13 +66,15 @@
 		"esbuild": "0.23.1",
 		"glob": "11.0.0"
 	},
+	"optionalDependencies": {
+		"cypress": "13.14.2"
+	},
 	"devDependencies": {
 		"@misskey-dev/eslint-plugin": "2.0.3",
 		"@types/node": "20.14.12",
 		"@typescript-eslint/eslint-plugin": "7.17.0",
 		"@typescript-eslint/parser": "7.17.0",
 		"cross-env": "7.0.3",
-		"cypress": "13.14.2",
 		"eslint": "9.8.0",
 		"globals": "15.9.0",
 		"ncp": "2.0.0",
