--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -9,6 +9,12 @@ openRemoteProfile: "Open remote profile"
 trustedLinkUrlPatterns: "Link to external site warning exclusion list"
 trustedLinkUrlPatternsDescription: "Separate with spaces for an AND condition or with line breaks for an OR condition. Using surrounding keywords with slashes will turn them into a regular expression. If you write only the domain name, it will be a backward match."
 mutuals: "Mutuals"
+isLocked: "Private account"
+isAdmin: "Administrator"
+isBot: "Bot user"
+open: "Open"
+emailDestination: "Destination address"
+date: "Date"
 renote: "Boost"
 unrenote: "Remove boost"
 renoted: "Boosted."
@@ -383,4 +389,10 @@ _externalNavigationWarning:
   title: "Navigate to an external site"
   description: "Leave {host} and go to an external site"
   trustThisDomain: "Trust this domain on this device in the future"
+
 remoteFollowersWarning: "Remote followers may have incomplete or outdated activity"
+
+_auth:
+  allowed: "Allowed"
+_announcement:
+  new: "New"
