--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -156,6 +156,15 @@ allowClickingNotifications: "Allow clicking on pop-up notifications"
 pinnedOnly: "Pinned"
 blockingYou: "Blocking you"
 warnExternalUrl: "Show warning when opening external URLs"
+_flash:
+  contentHidden: "Flash Content Hidden"
+  poweredByRuffle: "Powered by Ruffle."
+  arbitraryCodeExecutionWarning: "Always be wary of arbitrary code execution!"
+  failedToLoad: "Flash Content Failed To Load:"
+  isLoading: "Flash Content Is Loading"
+  loadingRufflePlayer: "Loading Ruffle player"
+  loadingFlashFile: "Loading Flash file"
+  cspError: "raw.esm.sh could not be accessed, meaning this instance's Content Security Policy is likely out of date. Please contact your instance administrators."
 _delivery:
   stop: "Suspend delivery"
   resume: "Resume delivery"
