fix chinese locales

--- a/sharkey-locales/zh-CN.yml
+++ b/sharkey-locales/zh-CN.yml
@@ -12,7 +12,7 @@ flagSpeakAsCatDescription: "猫猫模式下，你的帖子会被喵化"
 driveSearchbarPlaceholder: "搜索网盘"
 background: "背景"
 expandAllCws: "自动展开所有内容警告"
-collapseAllCws: "自动折叠所有回复"
+collapseAllCws: "自动折叠所有CW"
 cornerRadius: "边角圆润度"
 warnForMissingAltText: "在你忘记编写替代文本时提醒你"
 deeplFreeMode: "Use DeepLX-JS (No Auth Key)"
