--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sharkey",
-	"version": "2024.9.1-rc-stelpolva-20241023-beta",
+	"version": "2024.9.1-rc-stelpolva-20241027",
 	"codename": "shonk",
 	"repository": {
 		"type": "git",
