feat: fun: emoji reactions stat

--- a/stpv-locales/en-US.yml
+++ b/stpv-locales/en-US.yml
@@ -49,3 +49,5 @@ stpvMuteNote: "Soft mute this note later"
 stpvUnmuteNote: "Unmute this note"
 stpvMuteInstance: "Soft mute notes from this instance in timeline"
 stpvDomainUserSaysSomething: "{name} from {domain} said something"
+stpvReactionsStat: "Emoji Reactions Stats"
+stpvReactionsStatDescription: "Shows the the first 100 of emojis mostly reacted"
