add following feed to the deck UI

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -397,3 +397,8 @@ _auth:
   allowed: "Allowed"
 _announcement:
   new: "New"
+_deck:
+  _columns:
+    following: "Following"
+
+selectFollowingList: "Select a follow graph..."
