--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -46,8 +46,10 @@
 	},
 	"compileOnSave": false,
 	"include": [
-		"./**/*.ts",
-		"./**/*.vue"
+		"./src/**/*.ts",
+		"./src/**/*.vue",
+		"./test/**/*.ts",
+		"./test/**/*.vue"
 	],
 	"exclude": [
 		"node_modules",
