fix eslint in frontend / frontend-embed

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -49,7 +49,8 @@
 		"./src/**/*.ts",
 		"./src/**/*.vue",
 		"./test/**/*.ts",
-		"./test/**/*.vue"
+		"./test/**/*.vue",
+		"./@types/**/*.ts"
 	],
 	"exclude": [
 		"node_modules",
