--- a/packages/frontend-embed/tsconfig.json
+++ b/packages/frontend-embed/tsconfig.json
@@ -46,7 +46,8 @@
 	"compileOnSave": false,
 	"include": [
 		"./src/**/*.ts",
-		"./src/**/*.vue"
+		"./src/**/*.vue",
+		"./@types/**/*.ts"
 	],
 	"exclude": [
 		"node_modules",
