--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ coverage
 # config
 /.config/*
 !/.config/example.yml
+!/.config/test-example.yml
 !/.config/docker_example.yml
 !/.config/docker_example.env
 !/.config/cypress-devcontainer.yml
