dev: remove vscode autoformat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
 	"jest.jestCommandLine": "pnpm run jest",
 	"jest.runMode": "on-demand",
 	"editor.codeActionsOnSave": {
-		"source.fixAll": "explicit"
+		// "source.fixAll": "explicit"
 	},
 	"editor.formatOnSave": false
 }
