adjust translation string "Select a follow relationship..."

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -401,4 +401,4 @@ _deck:
   _columns:
     following: "Following"
 
-selectFollowingList: "Select a follow graph..."
+selectFollowRelationship: "Select a follow relationship..."
