fix megalodon unit tests

--- a/packages/megalodon/package.json
+++ b/packages/megalodon/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p ./",
     "doc": "typedoc --out ../docs ./src",
-    "test": "NODE_ENV=test jest -u --maxWorkers=3"
+    "test": "cross-env NODE_ENV=test jest -u --maxWorkers=3"
   },
   "engines": {
     "node": ">=15.0.0"
