add option `filePermissionBits` to override permissions on locally-stored files
This is useful for custom deployments, such as using a reverse proxy to serve static files directly

--- a/.config/docker_example.yml
+++ b/.config/docker_example.yml
@@ -312,3 +312,8 @@ checkActivityPubGetSignature: false
 
 # Upload or download file size limits (bytes)
 #maxFileSize: 262144000
+
+# CHMod-style permission bits to apply to uploaded files.
+# Permission bits are specified as a base-8 string representing User/Group/Other permissions.
+# This setting is only useful for custom deployments, such as using a reverse proxy to serve media.
+#filePermissionBits: '644'
