--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -231,6 +231,8 @@ _aboutMisskey:
   translation: "Translate Sharkey"
   donate_sharkey: "Donate to Sharkey"
   testers: "Testers"
+  misskeyContributors: "Misskey Contributors"
+  ourLovelySponsors: "Our lovely Sponsors"
 _serverDisconnectedBehavior:
   disabled: "Disable warning"
 _channel:
