--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -57,6 +57,7 @@
 		"misskey-bubble-game": "workspace:*",
 		"misskey-js": "workspace:*",
 		"misskey-reversi": "workspace:*",
+		"moment": "^2.30.1",
 		"photoswipe": "5.4.4",
 		"punycode": "2.3.1",
 		"rollup": "4.26.0",
