--- a/stpv-locales/zh-CN.yml
+++ b/stpv-locales/zh-CN.yml
@@ -46,6 +46,9 @@ _stpvPlus:
   combineRepliesQuotes:
     label: 合并引用和回复
     caption: 在帖子详细页同时显示引用和回复
+  disableTimeline:
+    label: 禁用时间线
+    caption: "禁用 {name} 时间线"
 stpvMuteUser: "在时间线上折叠该用户的帖子"
 stpvUnmuteUser: "在时间线上恢复显示该用户的帖子"
 stpvMuteNote: "以后在时间线上折叠"
