Add tooltip for shift-boost

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -17,6 +17,7 @@ emailDestination: "Destination address"
 date: "Date"
 renote: "Boost"
 unrenote: "Remove boost"
+renoteShift: "Boost (hold Shift for visibility menu)"
 renoted: "Boosted."
 quoted: "Quoted."
 rmboost: "Unboosted."
