show the `border` MFM function in cheatsheet - fixes #533

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -383,6 +383,8 @@ _mfm:
   fadeDescription: 'Fade text in and out.'
   background: "Background color"
   backgroundDescription: "Change the background color of text."
+  border: "Border"
+  borderDescription: "Draw a border around the content."
   plain: "Plain"
   plainDescription: "Deactivates the effects of all MFM contained within this MFM effect."
 _animatedMFM:
