add user-level "force content warning" moderation feature

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -471,3 +471,6 @@ _noteSearch:
     flash: "Flash"
 
 id: "ID"
+
+mandatoryCW: "Force content warning"
+mandatoryCWDescription: "Applies a content warning to all posts created by this user. If the post already has a CW, then this is appended to the end."
