fix TypeScript errors in modlog.MogLog.vue

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -303,6 +303,7 @@ _abuseReport:
         webhook: "Send a notification to the SystemWebhook when an abuse report is received or resolved."
 _moderationLogTypes:
   approve: "Approved"
+  decline: "Declined"
   setRemoteInstanceNSFW: "Set remote instance as NSFW"
   unsetRemoteInstanceNSFW: "Set remote instance as NSFW"
   rejectRemoteInstanceReports: "Rejected reports from remote instance"
