record ModLog entry when setting a user's content warning

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -304,6 +304,7 @@ _abuseReport:
 _moderationLogTypes:
   approve: "Approved"
   decline: "Declined"
+  setMandatoryCW: "Set content warning for user"
   setRemoteInstanceNSFW: "Set remote instance as NSFW"
   unsetRemoteInstanceNSFW: "Set remote instance as NSFW"
   rejectRemoteInstanceReports: "Rejected reports from remote instance"
