--- a/packages/megalodon/package.json
+++ b/packages/megalodon/package.json
@@ -9,9 +9,9 @@
     "doc": "typedoc --out ../docs ./src",
     "test": "cross-env NODE_ENV=test jest -u --maxWorkers=3"
   },
-  "engines": {
-    "node": ">=15.0.0"
-  },
+	"engines": {
+		"node": "^22.0.0"
+	},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/h3poteto/megalodon.git"
