clearer warning when replacing saved keys

--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -450,5 +450,5 @@ _defaultCWPriority:
 
 genKeys: "Generate Keys"
 _genKeysDialog:
-  text: "Are you sure that you want to generate new keys?"
+  text: "Are you sure that you want to generate new keys? This will stop push notifications for all users who have already enabled them."
   title: "Generate new keys"
