--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -432,6 +432,12 @@ postOn: "Post on"
 scheduledNotes: "Scheduled Notes"
 
 _permissions:
+  "write:admin:approve-user": "Approve new users"
+  "write:admin:decline-user": "Decline new users"
+  "write:admin:nsfw-user": "Mark users as NSFW"
+  "write:admin:unnsfw-user": "Mark users an not NSFW"
+  "write:admin:silence-user": "Silence users"
+  "write:admin:unsilence-user": "Un-silence users"
   "read:notes-schedule": "View your list of scheduled notes"
   "write:notes-schedule": "Compose or delete scheduled notes"
 
