--- a/sharkey-locales/en-US.yml
+++ b/sharkey-locales/en-US.yml
@@ -438,6 +438,7 @@ _permissions:
   "write:admin:decline-user": "Decline new users"
   "write:admin:nsfw-user": "Mark users as NSFW"
   "write:admin:unnsfw-user": "Mark users an not NSFW"
+  "write:admin:cw-user": "Apply mandatory CW on users"
   "write:admin:silence-user": "Silence users"
   "write:admin:unsilence-user": "Un-silence users"
   "read:notes-schedule": "View your list of scheduled notes"
